# right-track

./: .gitignore  BoundedEvent.cxx  BoundedEvent.h  CMakeLists.txt  ConvertProtobuf.cxx  ConvertProtobuf.h  DiscreteEvent.cxx  DiscreteEvent.h  Event.cxx  Event.h  EventContext.cxx  EventContext.h  EventManager.cxx  EventManager.h  EventRecords.h  EventTransport.h  EventTransportDebug.cxx  EventTransportDebug.h  EventTransportFile.cxx  EventTransportFile.h  EventTransportProtoFile.cxx  EventTransportProtoFile.h  EventTransportProtobuf.proto  EventTransportReader.h  EventTransportReaderDebug.cxx  EventTransportReaderDebug.h  README.md  RightTrackDefs.h  RightTrackGUI.wxg  RightTrackItem.cxx  RightTrackItem.h  ScopedContext.h  ScopedEvent.h  TextEvent.cxx  TextEvent.h  right_track_dump.cxx  rt-gui.wxg  test_read_trace.cxx  test_right_track.cxx  wxGlade_Notes
gui/: CMakeLists.txt  DisplayableIterator.cpp  DisplayableIterator.cxx  DisplayableIterator.h  EventCanvasApp.cpp  EventCanvasApp.h  EventSort.cpp  EventSort.h  EventTableApp.cpp  EventTableApp.h  EventTransportReaderGui.cpp  EventTransportReaderGui.cxx  EventTransportReaderGui.h  MainFrameApp.cpp  MainFrameApp.h  Model.cpp  Model.h  Model_IO.cpp  Observer.cpp  Observer.h  Serialize.h  Subject.cpp  Subject.h  SubjectObserver.h  TASKS  TextEditDialogApp.cpp  TextEditDialogApp.h  TimeLineCursor.cpp  TimeLineCursor.h  event_database.cpp  event_database.h  main.cpp
gui/gen_files/: EventCanvas.cpp  EventCanvas.h  EventTable.cpp  EventTable.h  EventViewFrame.cpp  EventViewFrame.h  MainFrame.cpp  MainFrame.h  RT_MainFrame.cpp  RT_MainFrame.h  TextEditDialog.cpp  TextEditDialog.h  main.cpp
gui/resources/: 144-martini.xpm  Bottom.xpm  Expand.xpm  Filter.xpm  Linux.xpm  Top.xpm  down_arrow.xpm  left_arrow.xpm  martini.xpm  right_arrow.xpm  up_arrow.xpm  zoom_in.xpm  zoom_out.xpm
gui/wxAbout/: header_png.h  wxAboutBoxTest.pjd  wxAboutBoxTest.sln  wxAboutBoxTest.vcproj  wxAboutBoxTestApp.cpp  wxAboutBoxTestApp.h  wxAboutBoxTestMainFrame.cpp  wxAboutBoxTestMainFrame.h  wxMozillaLikeAboutBox.pjd
